FPLA-782 code review updates